ssl_robot_challenge/log/build_2023-06-02_19-05-07/launcher/stderr.log
  File "/home/romeperl/ssl_robot_challenge/install/launcher/lib/python3.10/site-packages/launcher/xacro_urdf.py", line 23
    name="urdf_model"
         ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

